# pathtracer

./: .gitignore  CMakeLists.txt  Camera.h  README.MD  hittable_list.cpp  hittable_list.h  main.cpp  material.h  object.h  out.ppm  plane.h  random.h  ray.h  sphere.h  vec3.h
